--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,147 @@
+@import url('https://fonts.googleapis.com/css?family=Space+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Nothing+You+Could+Do&display=swap');
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  margin: 50px 10px 55px 10px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #343434;
+  color: #fcfaf1;
+  font-size: 14px;
+  font-family: 'Space Mono', monospace;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+img {
+  width: 100%;
+}
+.box {
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: 0 auto;
+}
+.highlight {
+  color: #e6b31e;
+}
+hr {
+  margin-top: 30px;
+  border-width: 0;
+  border-top: 2px solid #EEEEEE;
+  width: 80px;
+}
+a {
+  color: #8fc3af;
+  text-decoration: none;
+}
+a:hover{
+  color: #e6b31e;
+}
+/* img {
+  margin: 0 15px;
+} */
+.introComp {
+  font-size: 45px;
+}
+.helloHeather {
+  font-family: 'Nothing You Could Do', cursive;
+  font-size: 50px;
+}
+.engTitle {
+  margin-top: -40px;
+  margin-bottom: 75px;
+}
+.aboutSection {
+  margin-top: 75px;
+}
+.paraFormat {
+  text-align: justify;
+  padding: 10px
+}
+.faChev {
+  padding: 25px;
+  color: #e6b31e;
+}
+.stackFormat {
+  padding: 10px;
+}
+.techStack {
+  display: flex;
+  flex-direction: column;
+}
+.aboutPhoto {
+  width: 300px;
+  margin: 0 auto;
+}
+.projectBg {
+  border-radius: 1%;
+  background-color: #ffffff1a;
+  margin-bottom: 30px;
+  padding: 10px;
+}
+.links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+footer {
+  margin-top: 40px;
+  text-align: center;
+}
+
+@media screen 
+and (min-device-width: 1200px) 
+and (max-device-width: 1600px) 
+and (-webkit-min-device-pixel-ratio: 2)
+and (min-resolution: 192dpi) { 
+  .box{
+    width: 75%;
+  }
+}
+
+/* ----------- iPhone 6+, 7+ and 8+ ----------- */
+
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
+    .box {
+      width: 100%
+  }
+  .helloHeather {
+    font-size: 50px;
+  }
+}
+
+/* ----------- iPhone 6, 6S, 7 and 8 ----------- */
+
+
+@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 667px) { 
+  .box {
+      width: 100%
+  }
+  .helloHeather {
+    font-size: 50px;
+  }
+}
+
+/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+  .box {
+    width: 100%;
+  }
+  .aboutPhoto {
+    width: 90%;
+  }
+  .helloHeather {
+    font-size: 41px;
+  }
 }
