remove commented out and unncessary code

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ code {
 hr {
   margin-top: 30px;
   border-width: 0;
-  border-top: 2px solid #EEEEEE;
+  border-top: 2px solid #fcfaf1;
   width: 80px;
 }
 a {
