adjust margins on links

--- a/src/index.css
+++ b/src/index.css
@@ -78,9 +78,9 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  margin: 50px 10px 60px 10px;
 }
 footer {
-  margin-top: 40px;
   text-align: center;
 }
 
