--- a/src/index.css
+++ b/src/index.css
@@ -78,9 +78,12 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  margin: 50px 10px 60px 10px;
+}
+.contact-container {
+  margin-bottom: 50px;
 }
 footer {
+  margin-top: 60px;
   text-align: center;
 }
 
